# kindle_notes_reminder

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  compose.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  ty.toml
.claude/agents/: security-review.md
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 68d8c251ac25_unique_constraint.py  733289f694be_created_at.py  75aecc755453_initial_migration.py  7d07e7c8e990_evaluations.py  9b009926941d_add_index_on_note_book_id.py  a1b2c3d4e5f6_add_tweet_tables.py  c539a6b6965a_add_embedding_column.py  dbff8ad5086d_add_vector_index_on_note_embedding.py  fb012279fd22_add_url_and_urlchunk_tables.py
plans/: content-delete-feature.md  evaluation-analytics-endpoints.md  llm-semantic-chunking.md  tweet-ingestion-feature.md  unit-of-work-transactions.md  url-ingestion-feature.md
scripts/: parse_notebook.py
src/: additional_context.py  config.py  conftest.py  cors_config.py  database.py  dependencies.py  embedding_interface.py  evaluation_service.py  evaluations.py  llm_interface.py  main.py  models.py  notebook_parser.py  notebook_processor.py  openai_client.py  prompts.py  sse_utils.py  test_additional_context.py  test_books.py  test_content_chunker.py  test_cors_config.py  test_evaluation_service.py  test_evaluations.py  test_main.py  test_note_with_context.py  test_notebook_parser.py  test_notebook_processor.py  test_notes_by_book.py  test_prompts.py  test_random_note.py  test_search.py  test_sse_utils.py  test_url_fetcher.py  test_utils.py  types.py  url_fetcher.py
src/context_generation/: additional_context.py  test_additional_context.py
src/notebook_processing/: notebook_parser.py  notebook_processor.py  test_notebook_parser.py  test_notebook_processor.py
src/repositories/: book_repository.py  conftest.py  evaluation_repository.py  interfaces.py  models.py  note_repository.py  test_book_repository.py  test_evaluation_repository.py  test_note_repository.py  test_url_repository.py  (+2 more)
(+55 files in other folders)
