[project]
name = "kindle-notes-archive"
version = "0.1.0"
description = "A Kindle Notes archive and notification application"
readme = "README.md"
requires-python = "==3.13.2"
dependencies = [
    "alembic==1.15.2",
    "beautifulsoup4==4.13.4",
    "fastapi[standard]==0.115.12",
    "openai==1.72.0",
    "pgvector==0.4.1",
    "psycopg2-binary==2.9.10",
    "pydantic-settings==2.12.0",
    "sqlmodel==0.0.24",
]

[dependency-groups]
dev = [
    "ruff==0.11.2",
    "pytest==8.3.5",
    "pytest-asyncio==0.23.5",
    "pyright==1.1.402",
    "pytest-cov==6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
concurrency = ["thread"]

omit = [
    "src/test_*.py",
    "src/*/test_*.py",
    "src/__init__.py",
    "src/*/__init__.py",
    "src/test_utils.py",
    "migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "^\\s*\\.\\.\\.$",
    "pass",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
